--- a/form.css
+++ b/form.css
@@ -13,6 +13,10 @@ html{
   font-size: 62.5%;
 }
 body{
+  background: linear-gradient(rgba(100, 100, 100, 0.8), rgba(100, 100, 100, 0.8)), url('images/image-3.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -26,7 +30,7 @@ form{
   max-width: 500px;
   width: 100%;
   border: 1px solid var(--black-color);
-  padding: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
