Added content to the home page

--- a/home_page.css
+++ b/home_page.css
@@ -43,6 +43,33 @@ nav li a{
 nav li a.active{
   border-bottom: 3px solid #0000ff;
 }
+.post{
+  height: 75vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.post p{
+  font-size: 7rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.post #button{
+  background-color: #0000ff;
+  color: white;
+  border: none;
+  padding: 0px 25px;
+  font-size: 2.2rem;
+  font-family: 'Kanit', sans-serif;
+  cursor: pointer;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  width: 170px;
+  margin: 0 auto;
+}
 main{
   padding: 10px 0px;
   margin: 0px 250px;
