--- a/home_pages.css
+++ b/home_pages.css
@@ -10,6 +10,7 @@ html{
 }
 body{
   font-family: 'Poppins', sans-serif;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header{
   display: flex;
@@ -61,7 +62,6 @@ nav li .login:hover{
 .bar{
     display: block;
     width: 25px;
-    /*color: #0000ff;*/
     height: 3px;
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
@@ -96,6 +96,36 @@ h1{
   text-align: center;
   max-width: 950px;
   margin: 0px 20px;
+}
+main h1{
+  color: #0000ff;
+}
+.home hr{
+  margin: 0 auto;
+  margin-bottom: 20px;
+  width: 40%;
+}
+.user{
+  display: flex;
+  align-items: center;
+  padding: 0;
+}
+.user .user-img{
+  margin-right: 10px;
+}
+.user .fa-solid{
+  font-size: 2.5rem;
+  border: 1px solid black;
+  border-radius: 50%;
+  padding: 16px 18px;
+}
+.name-and-date p{
+  font-size: 1.8rem;
+  color: black;
+}
+.name-and-date span{
+  font-size: 1.4rem;
+  color: rgb(110, 110, 110);
 }
 .post{
   height: 80vh;
@@ -141,7 +171,7 @@ main h3, h4{
   font-size: 2.2rem;
 }
 main h3{
-  color:rgba(0, 0, 0, 0.733)
+  color: #0000ff;
 }
 main #topic_title{
   width: 100%;
