--- a/form.css
+++ b/form.css
@@ -36,7 +36,7 @@ header{
   background-color: white;
 }
 header h1{
-  font-size: 3.5rem;
+  font-size: 3.7rem;
   color: #0000ff;
 }
 .menu-bar{
@@ -59,7 +59,7 @@ nav ul li{
 }
 nav li a{
   text-decoration: none;
-  font-size: 1.8rem;
+  font-size: 2rem;
   color: #0000ff;
   margin-left: 30px;
   margin-right: 30px;
@@ -71,7 +71,7 @@ nav li .login{
   background-color: #0000ff;
   color: white;
   padding: 8px 30px 12px 30px;
-  font-size: 1.8rem;
+  font-size: 2rem;
   border-radius: 3px;
   box-shadow: 3px 4px 5px black;
   transition: all 0.5s ease-in-out;
@@ -86,7 +86,7 @@ form{
   max-width: 500px;
   width: 100%;
   border: 1px solid var(--white-color);
-  padding: 10px 25px 10px 25px;
+  padding: 10px 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,7 +100,7 @@ form input{
   width: 100%;
   margin: 9px 0;
   padding: 15px;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-family: 'Poppins', sans-serif;
   border-radius: 3px;
   background-color: #eee;
@@ -111,7 +111,7 @@ form input:focus{
   border: 1px solid var(--blue-color);
 }
 h1{
-  font-size: 3.2rem;
+  font-size: 3.4rem;
   color: #0000ff;
 }
 hr{
@@ -122,7 +122,7 @@ hr{
     margin-bottom: 10px;
 }
 form input::placeholder{
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-family: 'Poppins', sans-serif;
 }
 form input[type="submit"]{
@@ -132,7 +132,7 @@ form input[type="submit"]{
   cursor: pointer;
   transition: all 0.3s linear;
   font-weight: bold;
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   transition: all 0.5s ease-in-out;
   font-family: 'Poppins', sans-serif;
 }
@@ -140,7 +140,7 @@ form input[type="submit"]:hover{
   opacity: 0.7;
 }
 form p{
-  font-size: 1.7rem;
+  font-size: 1.9rem;
   margin: 5px 0;
   color: black;
 }
