--- a/home_page.css
+++ b/home_page.css
@@ -9,7 +9,7 @@ html{
   font-size: 62.5%;
 }
 body{
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header{
@@ -32,14 +32,32 @@ nav ul li{
   display: inline;
   list-style: none;
 }
-nav li a{
+nav .dropdown-toggle{
+  color: #0000ff; 
+  font-size: 2rem; 
+  text-decoration: none; 
+  cursor: pointer;
+}
+nav .dropdown-menu{
+  background-color: #0000ff;
+}
+.dropdown-menu .dropdown-item{
+  color: white; 
+  font-size: 2rem; 
+  padding: 20px 30px;
+}
+.dropdown-menu .dropdown-item:hover{
+  background-color: black;
+  color: white;
+}
+nav li .menu-item{
   text-decoration: none;
   font-size: 2rem;
   color: #0000ff;
   margin-left: 30px;
   margin-right: 30px;
 }
-nav li a:hover{
+nav li .menu-item:hover{
     border-bottom: 1px solid #0000ff;
 }
 nav li .login{
@@ -55,6 +73,14 @@ nav li .login:hover{
     opacity: 0.6;
     border-bottom: none;
 }
+.welcome_msg{
+  color: white;
+  text-align: left;
+  background-color: #0000ff;
+  padding: 30px;
+  font-size: 2.5rem;
+  padding-left: 150px;
+}
 .menu-bar{
     display: none;
     cursor: pointer;
@@ -68,10 +94,6 @@ nav li .login:hover{
     transition: all 0.3s ease-in-out;
     background: #0000ff;
     border-radius: 5px;
-}
-h1{
-    text-align: center;
-    font-size: 3.2rem;
 }
 .about{
     display: flex;
@@ -98,7 +120,7 @@ h1{
   margin: 0px 20px;
   line-height: 1.5;
 }
-main h1{
+.heading{
   color: #0000ff;
 }
 .home hr{
@@ -106,60 +128,30 @@ main h1{
   margin-bottom: 20px;
   width: 20%;
 }
-.post{
-  height: 65vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  max-width: 700px;
-  width: 100%;
-}
-.post p{
-  font-size: 3.9rem;
-  text-align: center;
-}
-.post #button{
-  background-color: #0000ff;
-  color: white;
-  border: none;
-  padding: 0 20px;
-  font-size: 2.4rem;
-  font-family: 'Poppins', sans-serif;
-  cursor: pointer;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  width: 170px;
-  margin: 0 auto;
-  transition: all 0.5s ease;
-}
-.post #button:hover{
-    border: 1px solid #0000ff;
-    color: #0000ff;
-    background-color: transparent;
-}
 main{
   padding: 10px 0;
   margin: 0 auto;
-  max-width: 700px;
-  width: 90%;
+  width: 1200px;
+  max-width: 95%;
   line-height: 2.75;
 }
-main h3, h4{
+main h3, h4 , .heading{
   font-size: 2.4rem;
+  margin-top: 30px;
 }
-main h3{
+main h3, .heading{
   color: #0000ff;
+  font-size: 5rem;
 }
 main #topic_title{
   width: 100%;
-  padding: 14px 20px;
+  padding: 5px 20px;
   font-size: 1.9rem;
   border: none;
   background-color: rgb(237, 234, 234);
   font-family: 'Poppins', sans-serif;
   border-radius: 3px;
+  margin-bottom: 30px;
 }
 main #topic_title:focus{
   outline: none;
@@ -193,15 +185,15 @@ main #topic_body::placeholder{
   font-size: 1.9rem;
 }
 main #create_post{
-  float: right;
+  /* float: right; */
   background-color: #0000ff;
   color: white;
   border: none;
-  padding: 13px 25px;
+  padding: 3px 20px;
   font-size: 1.9rem;
   font-family: 'Poppins', sans-serif;
   cursor: pointer;
-  margin-bottom: 3px;
+  margin-bottom: 50px;
 }
 .profile-h1{
   font-size: 4.9rem;
@@ -247,7 +239,7 @@ main #create_post{
         text-align: justify;
     }
 }
-@media (max-width: 750px){
+@media (max-width: 850px){
     header{
         justify-content: space-between;
         padding: 0 20px;
@@ -269,6 +261,24 @@ main #create_post{
     .menu-bar.active .bar:nth-child(3){
         transform: translateY(-8px) rotate(-45deg);
         background: #fff;
+    }
+    nav .dropdown-toggle{
+      color: white; 
+      font-size: 2rem; 
+      text-decoration: none; 
+      cursor: pointer;
+    }
+    nav .dropdown-menu{
+      background-color: white;
+    }
+    .dropdown-menu .dropdown-item{
+      color: #0000ff; 
+      font-size: 2rem; 
+      padding: 10px 25px;
+    }
+    .dropdown-menu .dropdown-item:hover{
+      background-color: black;
+      color: white;
     }
     nav .main-menu{
         background: #0000ff;
@@ -292,7 +302,7 @@ main #create_post{
         line-height: 2.5;
         color: white;
     }
-    nav .main-menu a:hover{
+    nav .main-menu .menu-item:hover{
         border-bottom: 1px solid white;
     }
     nav li .login{
