--- a/form.css
+++ b/form.css
@@ -1,91 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Big+Shoulders+Display:wght@700&family=Inter:wght@400;700&family=Kanit:wght@300&family=Karla:wght@400;700&family=Labrada:ital,wght@1,300&family=Lexend+Deca&family=Nunito:ital,wght@1,200&family=Open+Sans&family=Playfair+Display:wght@900&family=Poppins&family=Quicksand:wght@300;500&family=Raleway:wght@400;700&family=Roboto+Mono:wght@700&family=Tilt+Neon&family=Titillium+Web:wght@700&family=Ubuntu:wght@700&display=swap');
-:root{
-  --blue-color: #0000ff;
-  --white-color: #ffffff;
-  --black-color: #000000;
-}
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html{
-  font-size: 62.5%;
-}
 body{
-  background: linear-gradient(rgba(100, 100, 100, 0.6), rgba(100, 100, 100, 0.6)), url('images/image-3.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   font-family: 'Poppins', sans-serif;
+  height: 100vh;
 }
-header{
+.container{
+  background: linear-gradient(45deg,#7e22ce98, #e604b9b9, #0164d5b9);
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 10px 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-  background-color: white;
-}
-header h1{
-  font-size: 3.7rem;
-  color: #0000ff;
-}
-.menu-bar{
-    display: none;
-    cursor: pointer;
-}
-.bar{
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background: #0000ff;
-    border-radius: 5px;
-}
-nav ul li{
-  display: inline;
-  list-style: none;
-}
-nav li a{
-  text-decoration: none;
-  font-size: 2rem;
-  color: #0000ff;
-  margin-left: 30px;
-  margin-right: 30px;
-}
-nav li a:hover{
-    border-bottom: 1px solid #0000ff;
-}
-nav li .login{
-  background-color: #0000ff;
-  color: white;
-  padding: 8px 30px 12px 30px;
-  font-size: 2rem;
-  border-radius: 3px;
-  box-shadow: 3px 4px 5px black;
-  transition: all 0.5s ease-in-out;
-}
-nav li .login:hover{
-    opacity: 0.6;
-    border-bottom: none;
+  justify-content: center;
+  height: 90vh;
 }
 form{
-  margin-top: 100px;
-  margin-bottom: 20px;
   max-width: 500px;
   width: 100%;
-  border: 1px solid var(--white-color);
   padding: 10px 25px;
   display: flex;
   flex-direction: column;
@@ -93,6 +24,16 @@ form{
   justify-content: center;
   background-color: white;
   border-radius: 5px;
+}
+.form-flex{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 40px;
+}
+.register{
+  max-width: 700px;
+  width: 100%;
 }
 form input{
   display: block;
@@ -108,17 +49,18 @@ form input{
 }
 form input:focus{
   outline: none;
-  border: 1px solid var(--blue-color);
+  border: 1px solid #7e22ce;
 }
-h1{
+form h1{
   font-size: 3.4rem;
-  color: #0000ff;
+  color: #7e22ce;
+  text-decoration: underline;
 }
 hr{
     width: 15%;
     border: none;
     border-radius: 5px;
-    border: 1px solid #0000ff;
+    border: 1px solid #7e22ce;
     margin-bottom: 10px;
 }
 form input::placeholder{
@@ -127,7 +69,7 @@ form input::placeholder{
 }
 form input[type="submit"]{
   border: none;
-  background-color: var(--blue-color);
+  background-color: #7e22ce;
   color: var(--white-color);
   cursor: pointer;
   transition: all 0.3s linear;
@@ -144,91 +86,28 @@ form p{
   margin: 5px 0;
   color: black;
 }
-@media (max-width: 750px){
-    header{
-        justify-content: space-between;
-        padding: 0 10px;
-    }
-    header h1{
-        font-size: 3.3rem;
-        
-    }
-    .menu-bar{
-        display: block;
-    }
-    .menu-bar.active .bar:nth-child(2){
-        opacity: 0;
-        
-    }
-    .menu-bar.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45deg);
-        background: #fff;
-    }
-    .menu-bar.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45deg);
-        background: #fff;
-    }
-    nav .main-menu{
-        background: #0000ff;
-        display: flex;
-        flex-direction: column;
-        position: fixed;
-        top: 0;
-        right: -110%;
-        width: 80vw;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-        transition: right 0.3s ease;
-        transition: 0.5s ease-in-out;
-    }
-    nav .main-menu.active{
-        right: 0;
-    }
-    nav .main-menu a{
-        font-size: 2.8rem;
-        line-height: 2.5;
-        color: white;
-    }
-    nav .main-menu a:hover{
-        border-bottom: 1px solid white;
-    }
-    nav li .login{
-        box-shadow: none;
-        background-color: white;
-        color: #0000ff;
-        padding: 7px 25px 11px 25px;
-        transition: all 0.5s ease-in-out;
-    }
-    nav li .login:hover{
-        background-color: transparent;
-        border: 1px solid white;
-        color: white;
-    }
-}
 @media (max-width: 500px){
+  header{
+    display: none;
+  }
   h1{
     font-size:3.6rem;
     text-align: center;
   }
   form{
     width: 95%;
-    margin-top: 80px;
-    padding: 15px;
+  }
+  .container{
+    height: 100vh;
+  }
+  .form-flex{
+    flex-direction: column;
   }
 }
-@media (max-width: 460px){
-     header h1{
-        font-size: 3rem;
-    }
-}
-@media (max-width: 380px){
-     header h1{
-        font-size: 2.8rem;
-    }
-}
-@media (max-width: 310px){
-     header h1{
-        font-size: 2.5rem;
-    }
+@media (max-width: 375px){
+  .register{
+    padding: 15px;
+    margin-top: 40px;
+    margin-bottom: 10px;
+  }
 }
