--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Big+Shoulders+Display:wght@700&family=Inter:wght@400;700&family=Kanit:wght@300&family=Karla:wght@400;700&family=Labrada:ital,wght@1,300&family=Lexend+Deca&family=Nunito:ital,wght@1,200&family=Open+Sans&family=Playfair+Display:wght@900&family=Poppins&family=Quicksand:wght@300;500&family=Raleway:wght@400;700&family=Roboto+Mono:wght@700&family=Tilt+Neon&family=Titillium+Web:wght@700&family=Ubuntu:wght@700&display=swap');
+
+:root{
+    --blue-color: #7e22ce;
+    --white-color: #ffffff;
+    --black-color: #000000;
+}
 *{
   margin: 0;
   padding: 0;
@@ -10,21 +16,20 @@ html{
 }
 body{
   font-family: 'Poppins', sans-serif;
+  height: 100vh;
 }
 header{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 10px 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-  background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px 0;
+    top: 0;
+    width: 100%;
+    box-shadow: 1px 1px 7px 1px var(--blue-color);
 }
 header h1{
-  font-size: 3.7rem;
-  color: #0000ff;
+    font-size: 3.9rem;
+    color: var(--blue-color);
 }
 .menu-bar{
     display: none;
@@ -32,88 +37,145 @@ header h1{
 }
 .bar{
     display: block;
-    width: 25px;
     height: 3px;
-    margin: 5px auto;
+    margin: 5px 0;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background: #0000ff;
+    background: var(--blue-color);
     border-radius: 5px;
 }
+.bar1{
+    width: 30px;
+}
+.bar2{
+    width: 25px;
+}
+.bar3{
+    width: 22px;
+}
 nav ul li{
-  display: inline;
-  list-style: none;
+    display: inline;
+    list-style: none;
 }
 nav li a{
-  text-decoration: none;
-  font-size: 2rem;
-  color: #0000ff;
-  margin-left: 30px;
-  margin-right: 30px;
+    text-decoration: none;
+    font-size: 2rem;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 nav li a:hover{
-    border-bottom: 1px solid #0000ff;
+    border-bottom: 1px solid var(--blue-color);
 }
 nav li .login{
-  background-color: #0000ff;
-  color: white;
-  padding: 8px 30px 12px 30px;
-  font-size: 2rem;
-  border-radius: 3px;
-  box-shadow: 3px 4px 5px black;
-  transition: all 0.5s ease-in-out;
+    background-color: var(--blue-color);
+    color: var(--white-color);
+    padding: 10px 40px;
+    font-size: 2rem;
+    border-radius: 10px;
+    display: inline-block;
+    transition: all 0.5s ease-in-out;
 }
 nav li .login:hover{
     opacity: 0.6;
     border-bottom: none;
 }
 .main{
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('images/image-1.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding-top: 70px;
+    background: linear-gradient(45deg,rgba(0, 0, 0, 0.678), #7e22ceab, #f9779f);
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 .main h1{
-  font-size: 8.2rem;
-  color: White;
-  text-align: center;
-  max-width: 1100px;
+    font-size: 8.2rem;
+    text-align: center;
+    max-width: 1100px;
+    color: white;
 }
 .main p{
-  font-size: 2.7rem;
-  text-align: center;
-  max-width: 950px;
-  margin: 0px 20px;
-  color: white;
+    font-size: 2.7rem;
+    text-align: center;
+    max-width: 950px;
+    margin: 0px 20px;
+    color: white;
 }
 .main a{
-  text-decoration: none;
-  font-size: 2.2rem;
-  color: white;
-  background-color: #0000ff;
-  display: block;
-  margin-top: 20px;
-  padding: 13px 30px;
-  border-radius: 3px;
-  box-shadow: 3px 5px 5px black;
-  transition: all 0.5s ease-in-out;
+    text-decoration: none;
+    font-size: 2.2rem;
+    color: var(--white-color);
+    border: 2px solid var(--white-color);
+    display: block;
+    margin-top: 20px;
+    padding: 13px 30px;
+    position: relative;
+    border-radius: 20px;
 }
-.main a:hover{
-    opacity: 0.6;
+.btn1::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background-color: transparent;
+    transform: scale(0);
+    transition: transform 300ms ease-in-out;
+    color: black;
+}
+.btn1:hover::before, 
+.btn1:focus::before{
+    transform: scale(1.5);
+    background-color: var(--blue-color);
+}
+.btn1{
+    overflow: hidden;
+    /* background-color:  transparent; */
+}
+.about{
+    background: linear-gradient(-60deg,rgba(0, 0, 0, 0.678), #7e22ceab, #f9779f);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+    flex-direction: column;
+}
+.about h1{
+    font-size: 4.2rem;
+    color: var(--blue-color);
+}
+.about hr{
+    width: 15%;
+    border: none;
+    border-radius: 5px;
+    border: 1px solid var(--blue-color);
+    margin-bottom: 20px;
+}
+.about p{
+    font-size: 2rem;
+    text-align: center;
+    max-width: 950px;
+    margin: 0px 20px;
+    line-height: 2;
+    color: white;
+}
+form span{
+    color: #ffffff; 
+    font-size: 1.9rem; 
+    display: block; 
+    width: 100%; 
+    font-family: 'Poppins', sans-serif;
+    border-radius: 5px;
 }
 footer{
-  width: 100%;
-  background-color: #222;
-  font-size: 1.8rem;
-  text-align: center;
-  color: white;
-  padding: 20px 0px 5px 0px;
+    width: 100%;
+    background-color: var(--black-color);
+    font-size: 1.8rem;
+    text-align: center;
+    color: var(--white-color);
+    padding: 20px 0px 5px 0px;
 }
 footer p{
   line-height: 1.5;
@@ -140,29 +202,29 @@ footer p{
 @media (max-width: 750px){
     header{
         justify-content: space-between;
-        padding: 0 10px;
+        padding: 10px 10px;
     }
     header h1{
         font-size: 3.3rem;
-        
     }
     .menu-bar{
         display: block;
     }
     .menu-bar.active .bar:nth-child(2){
         opacity: 0;
-        
     }
     .menu-bar.active .bar:nth-child(1){
+        width: 25px;
         transform: translateY(8px) rotate(45deg);
-        background: #fff;
+        background: var(--white-color);
     }
     .menu-bar.active .bar:nth-child(3){
+        width: 25px;
         transform: translateY(-8px) rotate(-45deg);
-        background: #fff;
+        background: var(--white-color);
     }
     nav .main-menu{
-        background: #0000ff;
+        background: var(--blue-color);
         display: flex;
         flex-direction: column;
         position: fixed;
@@ -179,24 +241,27 @@ footer p{
         right: 0;
     }
     nav .main-menu a{
-        font-size: 2.8rem;
-        line-height: 2.5;
-        color: white;
+        font-size: 2.6rem;
+        color: var(--white-color);
+    }
+    nav .main-menu li{
+        margin-bottom: 30px;
     }
     nav .main-menu a:hover{
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid var(--white-color);
     }
     nav li .login{
-        box-shadow: none;
-        background-color: white;
-        color: #0000ff;
-        padding: 7px 25px 11px 25px;
+        font-size: 2.6rem;
+        color: var(--blue-color);
+        background-color: var(--white-color);
+        border-radius: 30px;
+        padding: 3px 20px;
         transition: all 0.5s ease-in-out;
+        border: 1px solid var(--white-color);
     }
     nav li .login:hover{
         background-color: transparent;
-        border: 1px solid white;
-        color: white;
+        color: var(--white-color);
     }
     .main h1{
         font-size: 5rem;
@@ -224,14 +289,27 @@ footer p{
     .main p{
         font-size: 1.8rem;
     }
+    .about p{
+        font-size: 1.4rem;
+        text-align: justify;
+    }
 }
 @media (max-width: 460px){
-     header h1{
+    header{
+        padding: 20px 10px;
+    }
+    header h1{
         font-size: 3rem;
     }
     .main a{
         font-size: 1.7rem;
         padding: 13px 25px;
+    }
+    .about h1{
+        font-size: 2.8rem;
+    }
+    footer{
+        font-size: 1.5rem;
     }
 }
 @media (max-width: 380px){
@@ -249,13 +327,31 @@ footer p{
         font-size: 1.4rem;
         padding: 12px 20px;
     }
+    .about p{
+        font-size: 1.2rem;
+        text-align: justify;
+        padding-bottom: 20px;
+    }
+    .about h1{
+        padding-top: 70px;
+        font-size: 2.5rem;
+    }
+    footer{
+        font-size: 1.3rem;
+    }
 }
-@media (max-width: 310px){
+@media (max-width: 320px){
+    header{
+        padding: 10px 7px;
+    }
      header h1{
         font-size: 2.5rem;
     }
     .main a{
         font-size: 1.4rem;
         padding: 12px 20px;
+    }
+    footer{
+        font-size: 1.1rem;
     }
 }
