--- a/css/post.css
+++ b/css/post.css
@@ -7,9 +7,10 @@ html{
   font-size: 62.5%;
 }
 .posts{
-  margin: 0 auto; 
+  margin: 0 auto;
+  margin-top: 20px; 
+  margin-bottom: 30px;
   max-width: 700px; 
-  max-width: 1200px;
   width: 95%;
 }
 .user{
@@ -18,7 +19,7 @@ html{
   padding: 0;
 }
 .container{
-  box-shadow: 2px 2px 6px 2px black; 
+  box-shadow: 1px 2px 5px 1px black;
   border-radius: 10px; 
   padding: 20px; 
   margin-bottom: 70px;
@@ -49,4 +50,7 @@ html{
   margin-bottom: 20px; 
   font-size: 2.2rem; 
   line-height: 1.4;
+}
+.my-posts{
+  margin: 0 auto; max-width: 700px; width: 95%;
 }
