--- a/css/style.css
+++ b/css/style.css
@@ -112,28 +112,6 @@ nav li .login:hover{
     position: relative;
     border-radius: 20px;
 }
-.btn1::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-    background-color: transparent;
-    transform: scale(0);
-    transition: transform 300ms ease-in-out;
-    color: black;
-}
-.btn1:hover::before, 
-.btn1:focus::before{
-    transform: scale(1.5);
-    background-color: var(--blue-color);
-}
-.btn1{
-    overflow: hidden;
-    /* background-color:  transparent; */
-}
 .about{
     background: linear-gradient(-60deg,rgba(0, 0, 0, 0.678), #7e22ceab, #f9779f);
     display: flex;
@@ -162,11 +140,10 @@ nav li .login:hover{
     color: white;
 }
 form span{
-    color: #ffffff; 
-    font-size: 1.9rem; 
+    font-size: 1.7rem; 
     display: block; 
     width: 100%; 
-    font-family: 'Poppins', sans-serif;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-radius: 5px;
 }
 footer{
