--- a/css/threadlists.css
+++ b/css/threadlists.css
@@ -6,17 +6,14 @@
 html{
   font-size: 65.5%;
 }
-body{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 .main{
   width: 1200px;
   max-width: 95%;
-  background-color:cornflowerblue;
+  background-color: #7e22ce;
   margin: 20px auto 50px auto;
   border-radius: 5px;
   padding: 40px;
-  text-align: justify;
+  text-align: center;
 }
 .main h1{
   font-size: 6rem;
