--- a/css/home_pages.css
+++ b/css/home_pages.css
@@ -188,12 +188,19 @@ main #create_post{
   padding: 30px 20px;
   box-shadow: 1px 2px 5px 1px black;
 }
-.profile img, .update-profile img{
-  width: 200px;
-  border-radius: 50%;
-  padding-bottom: 30px;
-  display: block;
+.profile h1, .update-profile h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 10rem;
   margin: 0 auto;
+  border: 5px solid black;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+  background-color: #7e22ce;
+  color: white;
 }
 .profile h3{
   font-size: 3rem;
@@ -234,9 +241,6 @@ main #create_post{
   max-width: 800px;
   width: 100%;
   padding: 30px 20px;
-}
-.update-profile img{
-  width: 150px;
 }
 .profile-flex{
   display: flex;
