--- a/css/forgot-passwords.css
+++ b/css/forgot-passwords.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
+
 *{
   padding: 0;
   margin: 0;
@@ -13,7 +15,7 @@ body{
   justify-content: center;
   flex-direction: column;
   background: #eee;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
   position: relative;
 }
 .container{
@@ -31,8 +33,8 @@ label{
   font-size: 2rem;
 }
 input[type="email"]{
-  margin-bottom: 30px;
-  border: 1px solid black;
+  margin-bottom: 10px;
+  border: 1px solid #7e22ce;
 }
 input[type="submit"]{
   color: white;
