--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Big+Shoulders+Display:wght@700&family=Inter:wght@400;700&family=Kanit:wght@300&family=Karla:wght@400;700&family=Labrada:ital,wght@1,300&family=Lexend+Deca&family=Nunito:ital,wght@1,200&family=Open+Sans&family=Playfair+Display:wght@900&family=Poppins&family=Quicksand:wght@300;500&family=Raleway:wght@400;700&family=Roboto+Mono:wght@700&family=Tilt+Neon&family=Titillium+Web:wght@700&family=Ubuntu:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
 
 :root{
     --blue-color: #7e22ce;
@@ -15,7 +15,7 @@ html{
   font-size: 62.5%;
 }
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
   height: 100vh;
 }
 header{
@@ -98,7 +98,7 @@ nav li .login:hover{
     font-size: 2.7rem;
     text-align: center;
     max-width: 950px;
-    margin: 0px 20px;
+    margin: 20px 20px;
     color: white;
 }
 .main a{
@@ -122,17 +122,17 @@ nav li .login:hover{
 }
 .about h1{
     font-size: 4.2rem;
-    color: var(--blue-color);
+    color: var(--white-color);
 }
 .about hr{
     width: 15%;
     border: none;
     border-radius: 5px;
-    border: 1px solid var(--blue-color);
+    border: 1px solid var(--white-color);
     margin-bottom: 20px;
 }
 .about p{
-    font-size: 2rem;
+    font-size: 2.3rem;
     text-align: center;
     max-width: 950px;
     margin: 0px 20px;
@@ -143,7 +143,7 @@ form span{
     font-size: 1.7rem; 
     display: block; 
     width: 100%; 
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Bricolage Grotesque', sans-serif;
     border-radius: 5px;
 }
 footer{
@@ -267,7 +267,7 @@ footer p{
         font-size: 1.8rem;
     }
     .about p{
-        font-size: 1.4rem;
+        font-size: 2rem;
         text-align: justify;
     }
 }
@@ -305,7 +305,7 @@ footer p{
         padding: 12px 20px;
     }
     .about p{
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         text-align: justify;
         padding-bottom: 20px;
     }
