--- a/css/success.css
+++ b/css/success.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow&family=Big+Shoulders+Display:wght@700&family=Inter:wght@400;700&family=Kanit:wght@300&family=Karla:wght@400;700&family=Labrada:ital,wght@1,300&family=Lexend+Deca&family=Nunito:ital,wght@1,200&family=Open+Sans&family=Playfair+Display:wght@900&family=Poppins&family=Quicksand:wght@300;500&family=Raleway:wght@400;700&family=Roboto+Mono:wght@700&family=Tilt+Neon&family=Titillium+Web:wght@700&family=Ubuntu:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,200;10..48,300;10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap');
 
 *{
   margin: 0;
@@ -10,7 +10,7 @@ html{
   font-size: 62.5%;
 }
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
 }
 .modal-container{
   display: flex;
@@ -55,5 +55,5 @@ body{
   text-decoration: none;
   color: white;
   font-size: 2rem;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Bricolage Grotesque', sans-serif;
 }
